# emberforge

./: .gitignore  CMakeLists.txt  README.md
include/: Character.h  CombatEngine.h  Enemy.h  GameEngine.h  Player.h  Types.h  UI.h
src/: Character.cpp  CombatEngine.cpp  Enemy.cpp  GameEngine.cpp  Player.cpp  UI.cpp  main.cpp
